readme file: template of summary